--- a/ApdateFilmUser/Views/CatalogPage.xaml
+++ b/ApdateFilmUser/Views/CatalogPage.xaml
@@ -2,11 +2,105 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ApdateFilmUser.Views.CatalogPage"
-             Title="CatalogPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:vm="clr-namespace:ApdateFilmUser.ViewModels"
+             xmlns:converters="clr-namespace:ApdateFilmUser.Convertes"
+             Title="Каталог">
+    
+    <ContentPage.Background>
+        <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+            <GradientStop Color="#02396C" Offset="0.0" />
+            <GradientStop Color="#046FD2" Offset="1" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:ScaleConverter x:Key="ScaleConverter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    
+    <ContentPage.BindingContext>
+        <vm:CatalogViewModel/>
+    </ContentPage.BindingContext>
+    
+    <Grid RowDefinitions="70,auto, *">
+        <Grid>
+            <Label Text="SmotriKino" Margin="10,10,0,0"
+                   FontSize="25" FontAttributes="Italic"/>
+            <Image Source="search.png" Margin="0,0,10,0"
+                   HorizontalOptions="End"/>
+        </Grid>
+        
+        <VerticalStackLayout Margin="30,0,30,0" Grid.Row="1">
+            <CarouselView 
+        HeightRequest="430" 
+        WidthRequest="290" 
+        PeekAreaInsets="60"  
+        ItemsSource="{Binding Medias}" 
+        IndicatorView="{x:Reference indicator}"
+        CurrentItemChanged="OnCurrentItemChanged">
+                
+
+                <CarouselView.ItemTemplate>
+                    <DataTemplate>
+                        <Frame 
+                    HasShadow="True" 
+                    BorderColor="Gray" 
+                    Padding="0" 
+                    CornerRadius="10"
+                    HeightRequest="380"
+                            Scale="{Binding IsSelected, Converter={StaticResource ScaleConverter}}">
+
+
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="SelectionStates">
+                                    <VisualState x:Name="Selected">
+                                        <VisualState.Setters>
+                                            <Setter Property="Scale" Value="1.1" />
+                                            <!-- Увеличение центрального элемента -->
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                    <VisualState x:Name="Unselected">
+                                        <VisualState.Setters>
+                                            <Setter Property="Scale" Value="0.9" />
+                                            <!-- Уменьшение боковых элементов -->
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+
+                            <Image Source="{Binding Preview}" Aspect="Fill"/>
+                        </Frame>
+                    </DataTemplate>
+                </CarouselView.ItemTemplate>
+            </CarouselView>
+
+            <IndicatorView 
+        HorizontalOptions="Center" 
+        Margin="0,20,0,10"
+        x:Name="indicator" 
+        IndicatorColor="Gray" 
+        SelectedIndicatorColor="White"/>
+        </VerticalStackLayout>
+
+        <Grid RowDefinitions="auto,*"
+              Grid.Row="2">
+            <Label Margin="20,0,10,0"
+                   Text="Лучшее сейчас"/>
+            <CollectionView ItemsSource="{Binding Medias}" Margin="10,0,0,0"
+                            Grid.Row="1">
+                <CollectionView.ItemsLayout>
+                    <LinearItemsLayout Orientation="Horizontal" ItemSpacing="5"/>
+                </CollectionView.ItemsLayout>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Frame HasShadow="True" BorderColor="Gray" Padding="0" CornerRadius="10"
+                           HeightRequest="170" WidthRequest="130">
+                            <Image Source="{Binding Preview}" Aspect="Fill"/>
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </Grid>
+    </Grid>
 </ContentPage>
