--- a/ApdateFilmUser/Views/AuthViews/AuthPage.xaml
+++ b/ApdateFilmUser/Views/AuthViews/AuthPage.xaml
@@ -2,7 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ApdateFilmUser.Views.AuthViews.AuthPage"
-             Title="AuthPage">
+             xmlns:viewmodel="clr-namespace:ApdateFilmUser.ViewModels.AuthViewModels"
+             Title="Авторизация">
+    <ContentPage.BindingContext>
+        <viewmodel:AuthViewModel/>
+    </ContentPage.BindingContext>
+    
     <Grid>
         <Grid.Background>
             <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
@@ -17,15 +22,16 @@
                        TextColor="White" FontSize="25"/>
                 <Frame CornerRadius="10" Padding="5"
                        BackgroundColor="#4DC5C5C5">
-                    <Entry Text=""
+                    <Entry Text="{Binding Email}"
                            Placeholder="Email"/>
                 </Frame>
                 <Frame CornerRadius="10" Padding="5"
                        BackgroundColor="#4DC5C5C5">
-                    <Entry Text="" 
+                    <Entry Text="{Binding Password}" 
                            Placeholder="Password"/>
                 </Frame>
                 <Button Text="Sign In" FontAttributes="Bold"
+                        Command="{Binding SignInCommand}"
                         Background="#046FD2"/>
                 <StackLayout Orientation="Horizontal"
                              HorizontalOptions="Center">
@@ -41,7 +47,7 @@
                             </FormattedString>
                         </Label.FormattedText>
                         <Label.GestureRecognizers>
-                            <TapGestureRecognizer Tapped="" />
+                            <TapGestureRecognizer Command="{Binding ToRegistersCommand}" />
                         </Label.GestureRecognizers>
                     </Label>
                 </StackLayout>
