--- a/ApdateFilmUser/Views/AuthViews/ProfilePage.xaml
+++ b/ApdateFilmUser/Views/AuthViews/ProfilePage.xaml
@@ -2,11 +2,66 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ApdateFilmUser.Views.AuthViews.ProfilePage"
-             Title="ProfilePage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:vm="clr-namespace:ApdateFilmUser.ViewModels.AuthViewModels"
+             Title="Профиль">
+
+    <ContentPage.BindingContext>
+        <vm:ProfileViewModel/>
+    </ContentPage.BindingContext>
+    
+    <Grid>
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="#02396C" Offset="0.0" />
+                <GradientStop Color="#046FD2" Offset="1" />
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Frame VerticalOptions="Center" HorizontalOptions="Center"
+       BackgroundColor="Transparent">
+            <StackLayout WidthRequest="310" Spacing="20">
+                <Label Text="Profile" FontAttributes="Bold"
+               TextColor="White" FontSize="25"/>
+                <Frame HorizontalOptions="Center"
+                       VerticalOptions="Center"
+                       Padding="0"
+                       CornerRadius="140"
+                       IsClippedToBounds="True"
+                       WidthRequest="140"
+                       HeightRequest="140">
+                    <Image Source="{Binding Avatar}">
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer/>
+                        </Image.GestureRecognizers>
+                    </Image>
+                </Frame>
+                <Frame CornerRadius="10" Padding="5"
+               BackgroundColor="#4DC5C5C5">
+                    <Entry Text="{Binding Surname}"
+                   Placeholder="Surname"/>
+                </Frame>
+                <Frame CornerRadius="10" Padding="5"
+               BackgroundColor="#4DC5C5C5">
+                    <Entry Text="{Binding Name}"
+                   Placeholder="Name"/>
+                </Frame>
+                <Frame CornerRadius="10" Padding="5"
+               BackgroundColor="#4DC5C5C5">
+                    <Entry Text="{Binding Email}"
+                   Placeholder="Email"/>
+                </Frame>
+                <Frame CornerRadius="10" Padding="5"
+               BackgroundColor="#4DC5C5C5">
+                    <Entry Text="{Binding Password}" 
+                   Placeholder="Password"/>
+                </Frame>
+                <Frame CornerRadius="10" Padding="5"
+               BackgroundColor="#4DC5C5C5">
+                    <DatePicker Date="{Binding Birthday}"/>
+                </Frame>
+                <Button Text="Logout" FontAttributes="Bold"
+                Command="{Binding ToAuthCommand}" TextColor="White"
+                Background="#046FD2"/>
+            </StackLayout>
+        </Frame>
+    </Grid>
 </ContentPage>
