--- a/ApdateFilmUser/Views/AuthViews/RegistrationPage.xaml
+++ b/ApdateFilmUser/Views/AuthViews/RegistrationPage.xaml
@@ -2,7 +2,71 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ApdateFilmUser.Views.AuthViews.RegistrationPage"
-             Title="RegistrationPage">
+             xmlns:vm="clr-namespace:ApdateFilmUser.ViewModels.AuthViewModels"
+             Title="Регистрация">
+    <ContentPage.BindingContext>
+        <vm:RegistrationViewModel/>
+    </ContentPage.BindingContext>
+    
+    <Grid>
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="#02396C" Offset="0.0" />
+                <GradientStop Color="#046FD2" Offset="1" />
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Frame VerticalOptions="Center" HorizontalOptions="Center"
+           BackgroundColor="#CC000000">
+            <StackLayout WidthRequest="310" Spacing="20">
+                <Label Text="Sign In" FontAttributes="Bold"
+                   TextColor="White" FontSize="25"/>
+                <Frame CornerRadius="10" Padding="5"
+                   BackgroundColor="#4DC5C5C5">
+                    <Entry Text="{Binding Surname}"
+                       Placeholder="Surname"/>
+                </Frame>
+                <Frame CornerRadius="10" Padding="5"
+                   BackgroundColor="#4DC5C5C5">
+                    <Entry Text="{Binding Name}"
+                       Placeholder="Name"/>
+                </Frame>
+                <Frame CornerRadius="10" Padding="5"
+                   BackgroundColor="#4DC5C5C5">
+                    <Entry Text="{Binding Email}"
+                       Placeholder="Email"/>
+                </Frame>
+                <Frame CornerRadius="10" Padding="5"
+                   BackgroundColor="#4DC5C5C5">
+                    <Entry Text="{Binding Password}" 
+                       Placeholder="Password"/>
+                </Frame>
+                <Frame CornerRadius="10" Padding="5"
+                   BackgroundColor="#4DC5C5C5">
+                    <DatePicker Date="{Binding Birthday}"/>
+                </Frame>
+                <Button Text="Sign In" FontAttributes="Bold"
+                    Command="{Binding SignInCommand}"
+                    Background="#046FD2"/>
+                <StackLayout Orientation="Horizontal"
+                         HorizontalOptions="Center">
+                    <Label Text="Do you already have an account? " TextColor="White" FontSize="12"/>
+                    <Label>
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="Enter" 
+                                  FontAttributes="Bold" 
+                                  TextColor="White" 
+                                  FontSize="12"
+                                  TextDecorations="Underline" />
+                            </FormattedString>
+                        </Label.FormattedText>
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding ToAuthCommand}" />
+                        </Label.GestureRecognizers>
+                    </Label>
+                </StackLayout>
+            </StackLayout>
+        </Frame>
+    </Grid>
 
-        
 </ContentPage>
