--- a/ApdateFilmUser/Views/AuthViews/AuthPage.xaml
+++ b/ApdateFilmUser/Views/AuthViews/AuthPage.xaml
@@ -7,6 +7,16 @@
     <ContentPage.BindingContext>
         <viewmodel:AuthViewModel/>
     </ContentPage.BindingContext>
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Entry">
+                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="BackgroundColor" Value="Transparent"/>
+                <Setter Property="PlaceholderColor" Value="LightGray"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     
     <Grid>
         <Grid.Background>
