--- a/ApdateFilmUser/Views/FavoritesPage.xaml
+++ b/ApdateFilmUser/Views/FavoritesPage.xaml
@@ -2,5 +2,42 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ApdateFilmUser.Views.FavoritesPage"
-             Title="FavoritesPage">
+             xmlns:vm="clr-namespace:ApdateFilmUser.ViewModels"
+             Title="Избранные">
+    <ContentPage.Background>
+        <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+            <GradientStop Color="#02396C" Offset="0.0" />
+            <GradientStop Color="#046FD2" Offset="1" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
+
+    <ContentPage.BindingContext>
+        <vm:FavoriteViewModel/>
+    </ContentPage.BindingContext>
+
+    <Grid>
+        <CollectionView Grid.Row="1" ItemsSource="{Binding Medias}">
+            <CollectionView.ItemsLayout>
+                <GridItemsLayout  Span="3" Orientation="Vertical" />
+                <!-- Количество колонок -->
+            </CollectionView.ItemsLayout>
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Padding="10">
+                        <Frame CornerRadius="10" BackgroundColor="Transparent"
+                           BorderColor="Transparent">
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer 
+Command="{Binding Source={RelativeSource AncestorType={x:Type vm:FavoriteViewModel}}, Path=TapMediaCommand}"
+CommandParameter="{Binding .}"/>
+                            </Frame.GestureRecognizers>
+                            <Grid>
+                                <Image Source="{Binding Preview}"/>
+                            </Grid>
+                        </Frame>
+                    </Grid>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+    </Grid>
 </ContentPage>
